# latte

./: Makefile  README.md  latc_x86  latc_x86_students  latte.cabal  stack.yaml  test.sh  todos.md
lib/: Makefile  runtime.c
src/: Main.hs
src/compiler/: CClasses.hs  CCommon.hs  CExprs.hs  CStmts.hs  Compiler.hs
src/parser/: AbsLatte.hs  Latte.cf  LexLatte.hs  ParLatte.hs  PrintLatte.hs  SkelLatte.hs
src/static_analysis/: ExprTC.hi  ExprTC.hs  ReturnsCheck.hi  ReturnsCheck.hs  SACommon.hs  SAExprs.hs  SAReturnsCheck.hs  SAStmts.hs  SATypes.hs  SAUtils.hs  StaticAnalysis.hs  StmtTC.hi  StmtTC.hs
