name:                latte
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/latte#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable latte
  hs-source-dirs:      src src/parser src/static_analysis src/compiler
  other-modules:
    AbsLatte
    ErrM
    LexLatte
    ParLatte
    PrintLatte
    SACommon
    SAUtils
    SAStmts
    SAReturnsCheck
    StaticAnalysis
    CCommon
    CExprs
    CStmts
    CClasses
    Compiler
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, array, mtl, containers, transformers
